// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PassCode Snapshot tests should match snapshot with code length 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="inputProgressContainer"
    >
      <div
        class="gap vertical"
        data-gap-size="size-16"
      />
      <div
        class="component"
      >
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
        <div
          class="dotWrapper"
        >
          <div
            class="dot"
          />
        </div>
      </div>
      <div
        class="gap vertical"
        data-gap-size="size-26"
      />
    </div>
    <div
      class="component"
    >
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          1
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          2
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          3
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          4
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          5
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          6
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          7
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          8
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          9
        </span>
      </button>
      <div />
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          0
        </span>
      </button>
      <div />
    </div>
  </div>
</div>
`;

exports[`PassCode Snapshot tests should match snapshot with unknown code length 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="inputProgressContainer"
    >
      <div
        class="gap vertical"
        data-gap-size="size-16"
      />
      <div
        class="component"
      />
      <div
        class="gap vertical"
        data-gap-size="size-26"
      />
    </div>
    <div
      class="component"
    >
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          1
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          2
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          3
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          4
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          5
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          6
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          7
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          8
        </span>
      </button>
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          9
        </span>
      </button>
      <div />
      <button
        class="component component component component component secondary secondary secondary size56 hug size56 defaultPaddings defaultWidth minHeight button secondary digit component"
        type="button"
      >
        <span
          class="label"
        >
          0
        </span>
      </button>
      <div />
    </div>
  </div>
</div>
`;
